# Test

./: .env  .env.example  README.md  manage.py  pyproject.toml
PapaMarketTest/: asgi.py  settings.py  urls.py  wsgi.py
market_test/: asgi.py  settings.py  urls.py  wsgi.py
weather/: dataclasses.py  enums.py  services.py  tests.py  urls.py  views.py
weather/static/weather/css/: base.css
weather/templates/weather/: base.html  main_page.html  weather_forecast.html  weather_now.html
