[tool.poetry]
name = "weather-test"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "weather_test"}]

[tool.poetry.dependencies]
python = "3.8.*"
django = "4.1.6"
requests = "2.28.2"
python-dotenv = "^0.21.1"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
